<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:gravity="center"
    android:padding="@dimen/activity_horizontal_margin"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/empty_purchases_textTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:text="@string/no_currency"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/coin_imageIv"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@drawable/btc"
        android:contentDescription="@string/coin_image"/>

    <TextView
        android:id="@+id/empty_currencies_textTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:text="@string/add_currency"
        android:textSize="18sp" />

</LinearLayout>