<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/android_gridview_custom_layout"
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:gravity="center"
    android:layout_weight="1"
    android:orientation="vertical"
    app:cardBackgroundColor="#fff"
    app:cardCornerRadius="4dp"
    app:cardElevation="6dp">

    <com.andexert.library.RippleView
        android:id="@+id/more"
        rv_centered="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:rv_color="#fff"
        app:rv_rippleDuration="200">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/currency_nameTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/currency_name"
                android:gravity="center_horizontal"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <Space
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <ImageView
                android:id="@+id/currency_imageIv"
                android:contentDescription="@string/currency_image"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/euro"/>

            <Space
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/exchange_valueTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:text="@string/currency_value"/>
        </LinearLayout>

    </com.andexert.library.RippleView>

</android.support.v7.widget.CardView>
