<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginTop="32dp"
    android:fillViewport="true"
    tools:context="com.teamvan.cryptoexchange.ExchangeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:gravity="center_horizontal"
        android:weightSum="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/exchange_rate_verboseTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:text="1 BTC = 23459 USD"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/black" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/switch_exchangeSc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="100">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_weight="50"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:gravity="center"
                    android:text="@string/from"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textSize="28sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:gravity="center_vertical"
                    android:weightSum="100">

                    <ImageView
                        android:id="@+id/coinImageIv"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:contentDescription="@string/coin_image"
                        android:src="@drawable/btc" />

                    <TextView
                        android:id="@+id/coinNameTv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="90"
                        android:text="Bitcoin"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/black" />
                </LinearLayout>

                <EditText
                    android:id="@+id/id_from_coin_amountEt"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edittext_bg"
                    android:inputType="numberDecimal"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:text="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:gravity="center"
                    android:text="@string/to"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textSize="28sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:gravity="center_vertical"
                    android:weightSum="100">

                    <TextView
                        android:id="@+id/currencyNameTv"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:layout_weight="90"
                        android:gravity="end|center_vertical"
                        android:text="China Yuan Renminbi"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/black" />

                    <ImageView
                        android:id="@+id/currencyImageIv"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:contentDescription="@string/currency_image"
                        android:src="@drawable/btc" />
                </LinearLayout>

                <EditText
                    android:id="@+id/to_currency_valueEt"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edittext_bg"
                    android:enabled="false"
                    android:gravity="center"
                    android:inputType="numberDecimal"
                    android:padding="4dp"
                    android:text="4536234"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/black" />
            </LinearLayout>
        </LinearLayout>

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
        </android.support.v4.widget.Space>

        <TextView
            android:id="@+id/last_updatedTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="Updated at 05/10/2017 01:22:22"/>
    </LinearLayout>
</ScrollView>